# python-aws-monorepo-boilerplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/copilot/: setup-steps.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml
infra/: app.py  cdk.json  pyproject.toml
infra/infra/stacks/: hello_stack.py
infra/infra/utils/: __init__.py  bundler.py
infra/src/infra/stacks/: hello_stack.py  orders_stack.py  products_stack.py  reports_stack.py  users_stack.py
infra/src/infra/utils/: bundler.py  lambda_factory.py
infra/stacks/: hello_stack.py
infra/tests/: __init__.py  test_bundler.py  test_hello_stack.py  test_lambda_factory.py  test_products_stack.py
infra/tests/unit/: __init__.py
infra/tests/unit/infra/: __init__.py
infra/tests/unit/stacks/: __init__.py  test_hello_stack.py  test_orders_stack.py  test_reports_stack.py  test_users_stack.py
infra/tests/unit/utils/: __init__.py  test_bundler.py
infra/utils/: bundler.py
lambdas/hello/: pyproject.toml
lambdas/hello/src/hello/: __init__.py  handler.py
lambdas/hello/tests/: test_handler.py
lambdas/hello/tests/integration/: test_handler_integration.py
lambdas/hello/tests/unit/: test_handler.py
lambdas/orders_create/: pyproject.toml
lambdas/orders_create/src/orders_create/: handler.py
lambdas/orders_create/tests/unit/: test_handler.py
lambdas/orders_get/: pyproject.toml
lambdas/orders_get/src/orders_get/: handler.py
lambdas/orders_get/tests/: test_handler.py
lambdas/orders_list/: pyproject.toml
lambdas/orders_list/src/orders_list/: handler.py
lambdas/orders_list/tests/: test_handler.py
lambdas/orders_update/: pyproject.toml
lambdas/orders_update/src/orders_update/: handler.py
lambdas/orders_update/tests/: test_handler.py
lambdas/products_create/: pyproject.toml
lambdas/products_create/src/products_create/: handler.py
lambdas/products_create/tests/: test_handler.py
lambdas/products_create/tests/unit/: test_handler.py
lambdas/products_delete/: pyproject.toml
lambdas/products_delete/src/products_delete/: handler.py
lambdas/products_delete/tests/: test_handler.py
lambdas/products_delete/tests/unit/: test_handler.py
lambdas/products_get/: pyproject.toml
lambdas/products_get/src/products_get/: handler.py
lambdas/products_get/tests/: test_handler.py
lambdas/products_list/: pyproject.toml
lambdas/products_list/src/products_list/: handler.py
lambdas/products_list/tests/unit/: test_handler.py
lambdas/products_update/: pyproject.toml
lambdas/products_update/src/products_update/: handler.py
lambdas/products_update/tests/: test_handler.py
lambdas/reports_generate/: pyproject.toml
lambdas/reports_generate/src/reports_generate/: handler.py
lambdas/reports_generate/tests/: test_handler.py
lambdas/reports_generate/tests/unit/: test_handler.py
lambdas/users_create/: pyproject.toml
lambdas/users_create/src/users_create/: handler.py
lambdas/users_create/tests/unit/: test_handler.py
lambdas/users_delete/: pyproject.toml
lambdas/users_delete/src/users_delete/: handler.py
lambdas/users_delete/tests/: test_handler.py
lambdas/users_delete/tests/unit/: test_handler.py
lambdas/users_get/: pyproject.toml
lambdas/users_get/src/users_get/: handler.py
lambdas/users_get/tests/: test_handler.py
lambdas/users_get/tests/unit/: test_handler.py
lambdas/users_list/: pyproject.toml
lambdas/users_list/src/users_list/: handler.py
lambdas/users_list/tests/: test_handler.py
lambdas/users_update/: pyproject.toml
lambdas/users_update/src/users_update/: handler.py
lambdas/users_update/tests/: test_handler.py
lambdas/users_update/tests/unit/: test_handler.py
scripts/: README.md  bootstrap.sh
scripts/check_branch_name/: pyproject.toml
scripts/check_branch_name/src/check_branch_name/: __init__.py  main.py
scripts/check_branch_name/tests/unit/: test_main.py
scripts/hello/: README.md  pyproject.toml
scripts/hello/src/hello_script/: __init__.py  main.py
scripts/hello/tests/unit/: test_main.py
scripts/hello_script/: README.md
scripts/hello_script/src/hello_script/: __init__.py  main.py
scripts/hello_script/tests/unit/: test_main.py
