[project]
name = "python-aws-monorepo-boilerplate"
version = "0.1.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*", "lambdas/*", "infra"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/shared/tests",
    "lambdas/hello/tests",
    "infra/tests",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
# Each package uses a src/ layout, so mypy_path must list every src/ root.
# The infra package uses a flat layout, so the infra/ directory itself is listed.
# Add a new entry here whenever a new package or lambda is introduced.
mypy_path = [
    "packages/shared/src",
    "lambdas/hello/src",
    "infra",
]
