[project]
name = "hello"
version = "0.1.0"
description = "Example Hello World Lambda function behind API Gateway"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "aws-lambda-powertools>=3.0.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb,lambda,apigateway]>=1.35.0",
    "moto[dynamodb]>=5.1.22",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]
