[project]
name = "orders-get"
version = "0.1.0"
description = "Get Order Lambda function"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "db",
    "aws-lambda-powertools>=3.0.0",
]

[tool.uv.sources]
    shared = { workspace = true }
    db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orders_get"]
