[project]
name = "products-delete"
version = "0.1.0"
description = "Delete Product Lambda function"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "aws-lambda-powertools>=3.0.0",
]

[tool.uv.sources]
    shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/products_delete"]
