[project]
name = "users-delete"
version = "0.1.0"
description = "Delete User Lambda function"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "auth",
    "aws-lambda-powertools>=3.0.0",
]

[tool.uv.sources]
    shared = { workspace = true }
    auth = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/users_delete"]
