[project]
name = "check-branch-name"
version = "0.1.0"
description = "Pre-commit hook script that validates the current git branch name"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
check-branch-name = "check_branch_name.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/check_branch_name"]
