[project]
name = "hello-script"
version = "0.1.0"
description = "Example Hello World script"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-script = "hello_script.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_script"]
